# polako-weather

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
app/: app.py  config.py  constants.py
app/services/: city.py  weather.py
app/web/weather/: routes.py  schemas.py
